objects/Splunk_Logging__mdt.object
<CustomObject>
    <description>It is used to turn on/off splunk logging for a group of classes.</description>
    <fields>
        <fullName>Enable_Log_Level_Debug_Fine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Log Level Debug Fine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Log_Level_Debug_Finer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Log Level Debug Finer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Log_Level_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Log Level Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Log_Level_Error__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Log Level Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Log_Level_Fatal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Log Level Fatal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Log_Level_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Log Level Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Log_Level_Warn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Log Level Warn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_System_Debug_Fine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable System Debug Fine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_System_Debug_Finer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable System Debug Finer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_System_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable System Debug</label>
        <type>Checkbox</type>
    </fields>
    <label>Splunk Logging</label>
    <pluralLabel>Splunk Loggings</pluralLabel>
</CustomObject>